--- a/package.json
+++ b/package.json
@@ -6,14 +6,19 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate-graphql": "graphql-codegen --config graphqlcodegen.yaml"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.5",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-paginate": "^8.1.4"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^2.16.4",
+    "@graphql-codegen/client-preset": "^1.2.6",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
     "@types/react-paginate": "^7.1.1",
@@ -22,6 +27,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
