--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "rick-and-morty",
+  "name": "rickorty",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "generate-graphql": "graphql-codegen --config graphqlcodegen.yaml"
+    "generate-graphql": "graphql-codegen --config graphqlcodegen.yaml",
+    "test:e2e": "yarn dev && cypress open"
   },
   "dependencies": {
     "@apollo/client": "^3.7.5",
-    "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +27,7 @@
     "@types/react-paginate": "^7.1.1",
     "@vitejs/plugin-react": "^3.0.0",
     "autoprefixer": "^10.4.13",
+    "cypress": "^12.4.1",
     "postcss": "^8.4.21",
     "prettier": "2.8.3",
     "tailwindcss": "^3.2.4",
